# diligent-sample

./: .gitmodules  CMakeLists.txt
assets/: triangle.psh  triangle.vsh
src/: GLFWWindow.cpp  GLFWWindow.h  Main.cpp  RenderContext.cpp  RenderContext.h  Renderer.cpp  Renderer.h
src/core/: GLFWWindow.cpp  GLFWWindow.h  RenderContext.cpp  Renderer.cpp  Renderer.h  RendererFactory.cpp  RendererFactory.h
